@@ -3,6 +3,7 @@ Version 1.1.0
 - added delete row button
 - added auto-info-add modal
 - added different css for first row
+- added automatic average calculation
 
 Version 1.0.11
 - fix sql scripts
